refactor(TG-5): isolate pricing and gps ; async call and error handle